manifests/suspended/cloudbeaver/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudbeaver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudbeaver
  template:
    metadata:
      labels:
        app: cloudbeaver
    spec:
      # 如果需要访问宿主机数据库，可通过 hostAliases 指向宿主机 IP
      # hostAliases:
      #   - ip: "CHANGE_ME_HOST_IP"
      #     hostnames:
      #       - host.docker.internal
      containers:
        - name: cloudbeaver
          image: dbeaver/cloudbeaver:latest
          ports:
            - containerPort: 8978
          volumeMounts:
            - name: cloudbeaver-workspace
              mountPath: /opt/cloudbeaver/workspace
      volumes:
        - name: cloudbeaver-workspace
          persistentVolumeClaim:
            claimName: cloudbeaver-workspace
